@@ -36,8 +36,10 @@ nx-libs (2:3.5.0.17-0) UNRELEASED; urgency=low
     + Rely on shlibs instead of hardcoded dependencies.
     + Drop xbitmaps from Build-Depends.
     + Move xfonts-base over to Recommends.
+  * update 031_nx-X11_parallel-make.full.patch. Add an explicit dependency
+    from the NX libX11.so to the nxcomp libraries. Unbreaks parallel builds
 
- -- Reinhard Tartler <siretart@tauware.de>  Sun, 09 Dec 2012 09:38:58 +0100
+ -- Reinhard Tartler <siretart@tauware.de>  Sat, 15 Dec 2012 14:29:12 +0100
 
 nx-libs (2:3.5.0.16-0) unstable; urgency=low
 
